--- a/_includes/eh-gallery-grid.html
+++ b/_includes/eh-gallery-grid.html
@@ -1,5 +1,16 @@
 <div class="eh-grid">
-
+  
+ <div class="eh-tile">
+    <a class="eh-tile-link"
+       href="https://galleries.entangledhumans.com/portraits"
+       title="Portraits">
+      <img class="eh-img"
+           src="{{ '/assets/images/covers/portraits' | relative_url }}"
+           alt="Portraits" />
+      <span class="eh-overlay">Portraits</span>
+    </a>
+  </div>
+  
   <div class="eh-tile">
     <a class="eh-tile-link"
        href="https://galleries.entangledhumans.com/architectural"
@@ -22,6 +33,8 @@
     </a>
   </div>
 
+  <!--
+  
   <div class="eh-tile">
     <a class="eh-tile-link"
        href="https://galleries.entangledhumans.com/wheels"
@@ -54,7 +67,7 @@
       <span class="eh-overlay">Private Content</span>
     </a>
   </div>
-
+  
   <div class="eh-tile">
     <a class="eh-tile-link"
        href="https://galleries.entangledhumans.com/snowbird"
@@ -65,5 +78,5 @@
       <span class="eh-overlay">Snowbird</span>
     </a>
   </div>
-
+-->
 </div>
