--- a/_includes/eh-gallery-grid.html
+++ b/_includes/eh-gallery-grid.html
@@ -1,13 +1,13 @@
 <div class="eh-grid">
   
- <div class="eh-tile">
+  <div class="eh-tile">
     <a class="eh-tile-link"
-       href="https://galleries.entangledhumans.com/portraits"
-       title="Portraits">
+       href="https://galleries.entangledhumans.com/portrait"
+       title="Portrait">
       <img class="eh-img"
-           src="{{ '/assets/images/covers/portraits' | relative_url }}"
-           alt="Portraits" />
-      <span class="eh-overlay">Portraits</span>
+           src="{{ '/assets/images/covers/portrait.jpg' | relative_url }}"
+           alt="Portrait" />
+      <span class="eh-overlay">Portrait</span>
     </a>
   </div>
   
