--- a/_includes/eh-gallery-grid.html
+++ b/_includes/eh-gallery-grid.html
@@ -2,12 +2,12 @@
   
   <div class="eh-tile">
     <a class="eh-tile-link"
-       href="https://galleries.entangledhumans.com/portrait"
-       title="Portrait">
+       href="https://galleries.entangledhumans.com/portraits"
+       title="Portraits">
       <img class="eh-img"
-           src="{{ '/assets/images/covers/portrait.jpg' | relative_url }}"
-           alt="Portrait" />
-      <span class="eh-overlay">Portrait</span>
+           src="{{ '/assets/images/covers/portraits.jpg' | relative_url }}"
+           alt="Portraits" />
+      <span class="eh-overlay">Portraits</span>
     </a>
   </div>
   
