--- a/_includes/eh-gallery-grid.html
+++ b/_includes/eh-gallery-grid.html
@@ -1,82 +1,10 @@
 <div class="eh-grid">
-  
-  <div class="eh-tile">
-    <a class="eh-tile-link"
-       href="https://galleries.entangledhumans.com/portraits"
-       title="Portraits">
-      <img class="eh-img"
-           src="{{ '/assets/images/covers/portraits.jpg' | relative_url }}"
-           alt="Portraits" />
-      <span class="eh-overlay">Portraits</span>
-    </a>
-  </div>
-  
-  <div class="eh-tile">
-    <a class="eh-tile-link"
-       href="https://galleries.entangledhumans.com/architectural"
-       title="Architectural">
-      <img class="eh-img"
-           src="{{ '/assets/images/covers/architectural.jpg' | relative_url }}"
-           alt="Architectural" />
-      <span class="eh-overlay">Architectural</span>
-    </a>
-  </div>
-
-  <div class="eh-tile">
-    <a class="eh-tile-link"
-       href="https://galleries.entangledhumans.com/travel"
-       title="Travel">
-      <img class="eh-img"
-           src="{{ '/assets/images/covers/travel.jpg' | relative_url }}"
-           alt="Travel" />
-      <span class="eh-overlay">Travel</span>
-    </a>
-  </div>
-
-  <!--
-  
-  <div class="eh-tile">
-    <a class="eh-tile-link"
-       href="https://galleries.entangledhumans.com/wheels"
-       title="Wheels">
-      <img class="eh-img"
-           src="{{ '/assets/images/covers/wheels.jpg' | relative_url }}"
-           alt="Wheels" />
-      <span class="eh-overlay">Wheels</span>
-    </a>
-  </div>
-
-  <div class="eh-tile">
-    <a class="eh-tile-link"
-       href="https://galleries.entangledhumans.com/baltimore"
-       title="Baltimore">
-      <img class="eh-img"
-           src="{{ '/assets/images/covers/baltimore.jpg' | relative_url }}"
-           alt="Baltimore" />
-      <span class="eh-overlay">Baltimore</span>
-    </a>
-  </div>
-
-  <div class="eh-tile">
-    <a class="eh-tile-link"
-       href="https://galleries.entangledhumans.com/private"
-       title="Private Content">
-      <img class="eh-img"
-           src="{{ '/assets/images/covers/private.jpg' | relative_url }}"
-           alt="Private Content" />
-      <span class="eh-overlay">Private Content</span>
-    </a>
-  </div>
---> 
-  <div class="eh-tile">
-    <a class="eh-tile-link"
-       href="https://galleries.entangledhumans.com/snowbird"
-       title="Snowbird">
-      <img class="eh-img"
-           src="{{ '/assets/images/covers/snowbird.jpg' | relative_url }}"
-           alt="Snowbird" />
-      <span class="eh-overlay">Snowbird</span>
-    </a>
-  </div>
-
+  {% for t in site.data.galleries.tiles %}
+    <div class="eh-tile">
+      <a class="eh-tile-link" href="{{ t.url }}" title="{{ t.title }}">
+        <img class="eh-img" src="{{ t.image | relative_url }}" alt="{{ t.title }}" />
+        <span class="eh-overlay">{{ t.title }}</span>
+      </a>
+    </div>
+  {% endfor %}
 </div>
